# zeus-backend

./: .gitignore  Makefile  README.md  pyproject.toml
src/zeus_backend/: cli.py  download.py
src/zeus_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/zeus_backend/incremental/: tracker.py
src/zeus_backend/ingest/: cnpj.py  cvm.py
src/zeus_backend/normalize/: cnpj.py  cvm.py
src/zeus_backend/utils/: hashing.py  io.py  logging.py  mapping.py
src/zeus_backend/warehouse/: __init__.py  indices.sql  loader.py  schema.sql
tests/: smoke_test.md
